# opentelemetry-latency-demo

./: Makefile  README.md
cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
doc/: dashboard.json
golang/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
